docs/frontend/parser_text.grammar.output
Grammar

    0 $accept: text_file "EOF"

    1 text_file: "EOF"
    2          | sentence "EOF"

    3 sentence: word
    4         | sentence word

    5 word: TEXT
    6     | NUMBER
    7     | DELIMITER
    8     | SYMBOL
    9     | FLOAT
   10     | NEWLINE
   11     | "$"
   12     | "+"
   13     | "*"
   14     | "-"
   15     | "/"
   16     | "%"
   17     | "^"
   18     | FALSE_EXPR_BEGIN
   19     | FALSE_EXPR_END
   20     | EXPR_BEGIN varexpr EXPR_END

   21 varexpr: "$"
   22        | "(" varexpr ")"
   23        | expr "^" varexpr
   24        | expr "%" varexpr
   25        | expr "*" varexpr
   26        | expr "/" varexpr
   27        | expr "-" varexpr
   28        | expr "+" varexpr
   29        | varexpr "^" expr
   30        | varexpr "%" expr
   31        | varexpr "*" expr
   32        | varexpr "/" expr
   33        | varexpr "-" expr
   34        | varexpr "+" expr
   35        | varexpr "^" varexpr
   36        | varexpr "%" varexpr
   37        | varexpr "*" varexpr
   38        | varexpr "/" varexpr
   39        | varexpr "-" varexpr
   40        | varexpr "+" varexpr

   41 expr: NUMBER
   42     | "(" expr ")"
   43     | expr "^" expr
   44     | expr "%" expr
   45     | expr "*" expr
   46     | expr "/" expr
   47     | expr "-" expr
   48     | expr "+" expr


Terminals, with rules where they appear

    "EOF" (0) 0 1 2
    error (256)
    NEWLINE (258) 10
    EXPR_BEGIN (259) 20
    EXPR_END (260) 20
    FALSE_EXPR_BEGIN (261) 18
    FALSE_EXPR_END (262) 19
    TEXT <std::string> (263) 5
    NUMBER <std::string> (264) 6 41
    DELIMITER <std::string> (265) 7
    SYMBOL <std::string> (266) 8
    FLOAT <std::string> (267) 9
    "(" <std::string> (268) 22 42
    ")" <std::string> (269) 22 42
    "$" <std::string> (270) 11 21
    "+" <std::string> (271) 12 28 34 40 48
    "*" <std::string> (272) 13 25 31 37 45
    "-" <std::string> (273) 14 27 33 39 47
    "/" <std::string> (274) 15 26 32 38 46
    "%" <std::string> (275) 16 24 30 36 44
    "^" <std::string> (276) 17 23 29 35 43


Nonterminals, with rules where they appear

    $accept (22)
        on left: 0
    text_file (23)
        on left: 1 2
        on right: 0
    sentence (24)
        on left: 3 4
        on right: 2 4
    word (25)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 3 4
    varexpr <Expr::Expression> (26)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 20 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    expr <int> (27)
        on left: 41 42 43 44 45 46 47 48
        on right: 23 24 25 26 27 28 29 30 31 32 33 34 42 43 44 45 46 47 48


State 0

    0 $accept: • text_file "EOF"

    "EOF"             shift, and go to state 1
    NEWLINE           shift, and go to state 2
    EXPR_BEGIN        shift, and go to state 3
    FALSE_EXPR_BEGIN  shift, and go to state 4
    FALSE_EXPR_END    shift, and go to state 5
    TEXT              shift, and go to state 6
    NUMBER            shift, and go to state 7
    DELIMITER         shift, and go to state 8
    SYMBOL            shift, and go to state 9
    FLOAT             shift, and go to state 10
    "$"               shift, and go to state 11
    "+"               shift, and go to state 12
    "*"               shift, and go to state 13
    "-"               shift, and go to state 14
    "/"               shift, and go to state 15
    "%"               shift, and go to state 16
    "^"               shift, and go to state 17

    text_file  go to state 18
    sentence   go to state 19
    word       go to state 20


State 1

    1 text_file: "EOF" •

    $default  reduce using rule 1 (text_file)


State 2

   10 word: NEWLINE •

    $default  reduce using rule 10 (word)


State 3

   20 word: EXPR_BEGIN • varexpr EXPR_END

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 24
    expr     go to state 25


State 4

   18 word: FALSE_EXPR_BEGIN •

    $default  reduce using rule 18 (word)


State 5

   19 word: FALSE_EXPR_END •

    $default  reduce using rule 19 (word)


State 6

    5 word: TEXT •

    $default  reduce using rule 5 (word)


State 7

    6 word: NUMBER •

    $default  reduce using rule 6 (word)


State 8

    7 word: DELIMITER •

    $default  reduce using rule 7 (word)


State 9

    8 word: SYMBOL •

    $default  reduce using rule 8 (word)


State 10

    9 word: FLOAT •

    $default  reduce using rule 9 (word)


State 11

   11 word: "$" •

    $default  reduce using rule 11 (word)


State 12

   12 word: "+" •

    $default  reduce using rule 12 (word)


State 13

   13 word: "*" •

    $default  reduce using rule 13 (word)


State 14

   14 word: "-" •

    $default  reduce using rule 14 (word)


State 15

   15 word: "/" •

    $default  reduce using rule 15 (word)


State 16

   16 word: "%" •

    $default  reduce using rule 16 (word)


State 17

   17 word: "^" •

    $default  reduce using rule 17 (word)


State 18

    0 $accept: text_file • "EOF"

    "EOF"  shift, and go to state 26


State 19

    2 text_file: sentence • "EOF"
    4 sentence: sentence • word

    "EOF"             shift, and go to state 27
    NEWLINE           shift, and go to state 2
    EXPR_BEGIN        shift, and go to state 3
    FALSE_EXPR_BEGIN  shift, and go to state 4
    FALSE_EXPR_END    shift, and go to state 5
    TEXT              shift, and go to state 6
    NUMBER            shift, and go to state 7
    DELIMITER         shift, and go to state 8
    SYMBOL            shift, and go to state 9
    FLOAT             shift, and go to state 10
    "$"               shift, and go to state 11
    "+"               shift, and go to state 12
    "*"               shift, and go to state 13
    "-"               shift, and go to state 14
    "/"               shift, and go to state 15
    "%"               shift, and go to state 16
    "^"               shift, and go to state 17

    word  go to state 28


State 20

    3 sentence: word •

    $default  reduce using rule 3 (sentence)


State 21

   41 expr: NUMBER •

    $default  reduce using rule 41 (expr)


State 22

   22 varexpr: "(" • varexpr ")"
   42 expr: "(" • expr ")"

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 29
    expr     go to state 30


State 23

   21 varexpr: "$" •

    $default  reduce using rule 21 (varexpr)


State 24

   20 word: EXPR_BEGIN varexpr • EXPR_END
   29 varexpr: varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    EXPR_END  shift, and go to state 31
    "+"       shift, and go to state 32
    "*"       shift, and go to state 33
    "-"       shift, and go to state 34
    "/"       shift, and go to state 35
    "%"       shift, and go to state 36
    "^"       shift, and go to state 37


State 25

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "+"  shift, and go to state 38
    "*"  shift, and go to state 39
    "-"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42
    "^"  shift, and go to state 43


State 26

    0 $accept: text_file "EOF" •

    $default  accept


State 27

    2 text_file: sentence "EOF" •

    $default  reduce using rule 2 (text_file)


State 28

    4 sentence: sentence word •

    $default  reduce using rule 4 (sentence)


State 29

   22 varexpr: "(" varexpr • ")"
   29        | varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    ")"  shift, and go to state 44
    "+"  shift, and go to state 32
    "*"  shift, and go to state 33
    "-"  shift, and go to state 34
    "/"  shift, and go to state 35
    "%"  shift, and go to state 36
    "^"  shift, and go to state 37


State 30

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   42 expr: "(" expr • ")"
   43     | expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    ")"  shift, and go to state 45
    "+"  shift, and go to state 38
    "*"  shift, and go to state 39
    "-"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42
    "^"  shift, and go to state 43


State 31

   20 word: EXPR_BEGIN varexpr EXPR_END •

    $default  reduce using rule 20 (word)


State 32

   34 varexpr: varexpr "+" • expr
   40        | varexpr "+" • varexpr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 46
    expr     go to state 47


State 33

   31 varexpr: varexpr "*" • expr
   37        | varexpr "*" • varexpr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 48
    expr     go to state 49


State 34

   33 varexpr: varexpr "-" • expr
   39        | varexpr "-" • varexpr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 50
    expr     go to state 51


State 35

   32 varexpr: varexpr "/" • expr
   38        | varexpr "/" • varexpr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 52
    expr     go to state 53


State 36

   30 varexpr: varexpr "%" • expr
   36        | varexpr "%" • varexpr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 54
    expr     go to state 55


State 37

   29 varexpr: varexpr "^" • expr
   35        | varexpr "^" • varexpr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 56
    expr     go to state 57


State 38

   28 varexpr: expr "+" • varexpr
   48 expr: expr "+" • expr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 58
    expr     go to state 59


State 39

   25 varexpr: expr "*" • varexpr
   45 expr: expr "*" • expr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 60
    expr     go to state 61


State 40

   27 varexpr: expr "-" • varexpr
   47 expr: expr "-" • expr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 62
    expr     go to state 63


State 41

   26 varexpr: expr "/" • varexpr
   46 expr: expr "/" • expr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 64
    expr     go to state 65


State 42

   24 varexpr: expr "%" • varexpr
   44 expr: expr "%" • expr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 66
    expr     go to state 67


State 43

   23 varexpr: expr "^" • varexpr
   43 expr: expr "^" • expr

    NUMBER  shift, and go to state 21
    "("     shift, and go to state 22
    "$"     shift, and go to state 23

    varexpr  go to state 68
    expr     go to state 69


State 44

   22 varexpr: "(" varexpr ")" •

    $default  reduce using rule 22 (varexpr)


State 45

   42 expr: "(" expr ")" •

    $default  reduce using rule 42 (expr)


State 46

   29 varexpr: varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr
   40        | varexpr "+" varexpr •

    "*"  shift, and go to state 33
    "/"  shift, and go to state 35
    "%"  shift, and go to state 36
    "^"  shift, and go to state 37

    $default  reduce using rule 40 (varexpr)


State 47

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   34        | varexpr "+" expr •
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "*"  shift, and go to state 39
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42
    "^"  shift, and go to state 43

    $default  reduce using rule 34 (varexpr)


State 48

   29 varexpr: varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   37        | varexpr "*" varexpr •
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "^"  shift, and go to state 37

    $default  reduce using rule 37 (varexpr)


State 49

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   31        | varexpr "*" expr •
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "^"  shift, and go to state 43

    $default  reduce using rule 31 (varexpr)


State 50

   29 varexpr: varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   39        | varexpr "-" varexpr •
   40        | varexpr • "+" varexpr

    "*"  shift, and go to state 33
    "/"  shift, and go to state 35
    "%"  shift, and go to state 36
    "^"  shift, and go to state 37

    $default  reduce using rule 39 (varexpr)


State 51

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   33        | varexpr "-" expr •
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "*"  shift, and go to state 39
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42
    "^"  shift, and go to state 43

    $default  reduce using rule 33 (varexpr)


State 52

   29 varexpr: varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   38        | varexpr "/" varexpr •
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "^"  shift, and go to state 37

    $default  reduce using rule 38 (varexpr)


State 53

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   32        | varexpr "/" expr •
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "^"  shift, and go to state 43

    $default  reduce using rule 32 (varexpr)


State 54

   29 varexpr: varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   36        | varexpr "%" varexpr •
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "^"  shift, and go to state 37

    $default  reduce using rule 36 (varexpr)


State 55

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   30        | varexpr "%" expr •
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "^"  shift, and go to state 43

    $default  reduce using rule 30 (varexpr)


State 56

   29 varexpr: varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   35        | varexpr "^" varexpr •
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "^"  shift, and go to state 37

    $default  reduce using rule 35 (varexpr)


State 57

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   29        | varexpr "^" expr •
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "^"  shift, and go to state 43

    $default  reduce using rule 29 (varexpr)


State 58

   28 varexpr: expr "+" varexpr •
   29        | varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "*"  shift, and go to state 33
    "/"  shift, and go to state 35
    "%"  shift, and go to state 36
    "^"  shift, and go to state 37

    $default  reduce using rule 28 (varexpr)


State 59

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr
   48     | expr "+" expr •

    "*"  shift, and go to state 39
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42
    "^"  shift, and go to state 43

    $default  reduce using rule 48 (expr)


State 60

   25 varexpr: expr "*" varexpr •
   29        | varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "^"  shift, and go to state 37

    $default  reduce using rule 25 (varexpr)


State 61

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   45     | expr "*" expr •
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "^"  shift, and go to state 43

    $default  reduce using rule 45 (expr)


State 62

   27 varexpr: expr "-" varexpr •
   29        | varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "*"  shift, and go to state 33
    "/"  shift, and go to state 35
    "%"  shift, and go to state 36
    "^"  shift, and go to state 37

    $default  reduce using rule 27 (varexpr)


State 63

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   47     | expr "-" expr •
   48     | expr • "+" expr

    "*"  shift, and go to state 39
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42
    "^"  shift, and go to state 43

    $default  reduce using rule 47 (expr)


State 64

   26 varexpr: expr "/" varexpr •
   29        | varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "^"  shift, and go to state 37

    $default  reduce using rule 26 (varexpr)


State 65

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   46     | expr "/" expr •
   47     | expr • "-" expr
   48     | expr • "+" expr

    "^"  shift, and go to state 43

    $default  reduce using rule 46 (expr)


State 66

   24 varexpr: expr "%" varexpr •
   29        | varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "^"  shift, and go to state 37

    $default  reduce using rule 24 (varexpr)


State 67

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   43 expr: expr • "^" expr
   44     | expr • "%" expr
   44     | expr "%" expr •
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "^"  shift, and go to state 43

    $default  reduce using rule 44 (expr)


State 68

   23 varexpr: expr "^" varexpr •
   29        | varexpr • "^" expr
   30        | varexpr • "%" expr
   31        | varexpr • "*" expr
   32        | varexpr • "/" expr
   33        | varexpr • "-" expr
   34        | varexpr • "+" expr
   35        | varexpr • "^" varexpr
   36        | varexpr • "%" varexpr
   37        | varexpr • "*" varexpr
   38        | varexpr • "/" varexpr
   39        | varexpr • "-" varexpr
   40        | varexpr • "+" varexpr

    "^"  shift, and go to state 37

    $default  reduce using rule 23 (varexpr)


State 69

   23 varexpr: expr • "^" varexpr
   24        | expr • "%" varexpr
   25        | expr • "*" varexpr
   26        | expr • "/" varexpr
   27        | expr • "-" varexpr
   28        | expr • "+" varexpr
   43 expr: expr • "^" expr
   43     | expr "^" expr •
   44     | expr • "%" expr
   45     | expr • "*" expr
   46     | expr • "/" expr
   47     | expr • "-" expr
   48     | expr • "+" expr

    "^"  shift, and go to state 43

    $default  reduce using rule 43 (expr)
